# GroundStation26

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.py  docker-compose.yml  download_map.py  entrypoint.sh  export_telemetry_csv.py  install_ios.md  map_archive.py  requirements.txt  run_groundstation.py  tile_bundle.py
.cargo/: config.toml
.github/workflows/: stm32build.yaml
backend/: Cargo.toml  build.py  build.rs  uart_packet_bridge.py
backend/calibration/: loadcell_calibration.json  loadcell_calibration_testing.json
backend/comms/: comms.json  coms.json
backend/config/: calibration_config.json  fill_targets.json  flight_setup.json
backend/layout/: layout.json  layout_hitl.json  layout_test_fire.json
backend/src/: auth.rs  comms.rs  comms_config.rs  dummy_packets.rs  fill_targets.rs  flight_setup.rs  flight_sim.rs  gpio.rs  gpio_panel.rs  i18n.rs  layout.rs  loadcell.rs  logger.rs  main.rs  map.rs  radio.rs  radio_config.rs  ring_buffer.rs  rocket_commands.rs  safety_task.rs  sequences.rs  state.rs  telemetry_db.rs  telemetry_decode.rs  telemetry_task.rs  test_fire_csv.rs  types.rs  web.rs
backend/src/telemetry_task/: commands.rs  derived.rs  prelude.rs  radio_io.rs
backend/tools/: av_bay_radio_direct_test.py  comms_config_gui.py  edit_calibration_gui.py  fill_tui.py  layout_gui.py  radio_link_config_gui.py  radio_uart_command_frame_probe.py  radio_uart_duplex_test.py  users_config_gui.py
backend/users/: users.json
docs/: README.md  architecture.md  frontend_api.md
docs/backend/: architecture.md  i2c.md
docs/frontend/: api.md  architecture.md
docs/shared/: contracts.md
docs/system/: overview.md
frontend/: Cargo.toml  Dioxus.toml  build.py  build.rs
frontend/assets/: Assets.car  LocationShim.m  index.css
frontend/assets/Assets.xcassets/AppIcon.appiconset/: Contents.json
frontend/icons/: icon.icns
frontend/platform/android/: AndroidManifest.xml  proguard-rules.pro
frontend/platform/android/kotlin/com/ubseds/gs26/: LocationShim.kt
frontend/platform/android/kotlin/dev/dioxus/main/: RustWebViewClient.kt
frontend/platform/android/res/values/: strings.xml
frontend/platform/ios/: Info.plist
frontend/platform/macos/: Info.plist
frontend/scripts/: ios_package_sign.sh  patch_dx_serve_ios_plist.sh  patch_dx_serve_macos_plist.sh  patch_plist.sh
frontend/src/: app.rs  auth.rs  lib.rs  main.rs  telemetry_dashboard.rs
frontend/src/telemetry_dashboard/: actions_tab.rs  calibration_tab.rs  chart.rs  connection_status_tab.rs  data_chart.rs  data_tab.rs  detailed_tab.rs  errors_tab.rs  gps.rs  gps_android.rs  gps_apple.rs  gps_webview.rs  latency_chart.rs  layout.rs  layout_settings_tab.rs  map_tab.rs  mod.rs  network_topology_tab.rs  notifications_tab.rs  state_tab.rs  types.rs  version_page.rs  version_tab.rs  warnings_tab.rs
frontend/static/: embedded.mobileprovision  ground_map.js
frontend/web/: index.css
map_downloader/: Cargo.toml
map_downloader/src/: fetch_gibs_tiles.rs  main.rs
nginx/: Dockerfile  entrypoint.sh  nginx.conf
scripts/: generate_store_images.py  patch_android_webview_logging.py
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.py
src/db/: model.py
src/telemetry/: telemetry.py
