[workspace]
members = ["backend", "frontend", "shared", "map_downloader"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Rylan Meilutis <rylan.meilutis@gmail.com>"]
license-file = "LICENSE"
description = "The ground station software for SEDS' 2026 irec competition."
repository = "https://github.com/University-at-Buffalo-SEDS/GroundStation26"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
incremental = false
overflow-checks = false