[package]
name = "groundstation_backend"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
raspberry_pi = ["rppal"]
testing = []

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
serde_json.workspace = true
sedsprintf_rs_2026.workspace = true
rppal = { git = "https://gitlab.rylanswebsite.com/rylan-meilutis/rppal.git", branch = "main", optional = true}

groundstation_shared = { path = "../shared" }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }


# for ring buffer, ws, etc.
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["fs"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
serial = "0.4.0"
futures = "0.3.31"
bytes = "1.11.0"
