[package]
name = "groundstation_backend"
version = "0.1.0"
edition = "2024"
description.workspace = true
license-file.workspace = true
repository.workspace = true

[features]
raspberry_pi = ["rppal"]
testing = []
hitl_mode = []
test_fire_mode = []

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
serde_json.workspace = true
rppal = { git = "https://gitlab.rylanswebsite.com/rylan-meilutis/rppal.git", branch = "main", optional = true }
sedsprintf_rs_2026 = { git = "https://github.com/University-at-Buffalo-SEDS/sedsprintf_2026.git", branch = "main", features = ["compression", "std", "timesync", "discovery"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

anyhow = "1.0.102"
tower-http = { version = "0.6.8", features = ["fs", "compression-full"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serialport = "4.9.0"
futures = "0.3.32"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
base64 = "0.22.1"
ring = "0.17.14"
reqwest = { version = "0.13.2", default-features = true, features = ["json", "rustls"] }
whatlang = "0.18.0"
