[package]
name = "groundstation_frontend"
version = "0.1.2"
edition = "2024"
description.workspace = true
license-file.workspace = true
repository.workspace = true


[dependencies]
# Dioxus core + router
dioxus = { version = "0.7", default-features = false }
dioxus-router = "0.7"
groundstation_shared = { path = "../shared" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform time helpers
web-sys = "0.3.83"
gloo-net = "0.6.0"
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
dirs = "6.0.0"
futures-channel = "0.3.31"
once_cell = "1.21.3"

# ---------- Web (wasm32) ----------
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7", features = ["web", "macro"] }
dioxus-signals = "0.7.2"
dioxus-sdk-geolocation = "0.7.0"

gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }

wasm-bindgen = "0.2"
futures-util = "0.3.31"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "WebSocket",
    "MessageEvent",
    "Storage",
    "console",
    "Navigator",
    "Geolocation",
    "Position",
    "PositionError",
    "Coordinates",
    "Permissions", # Optional (for permission queries)
    "PermissionStatus", # Optional",
] }

# ---------- Native (desktop/mobile) ----------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7", features = ["desktop", "macro"] }
# For mobile builds we still compile the same code; `dx` selects the right platform features.
# If you want to be explicit, you can swap to features=["mobile"] in a mobile-only profile.
dioxus-signals = "0.7.2"
dioxus-desktop = "0.7.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13", default-features = true, features = ["json", "rustls"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.5"


[target.'cfg(target_os = "windows")'.dependencies]
dioxus-sdk-geolocation = "0.7.0"



[features]
# Dioxus CLI uses these conventions. :contentReference[oaicite:3]{index=3}
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[build-dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "rustls"] }
