[package]
name = "groundstation_frontend"
version = "0.2.0"
edition = "2024"
description.workspace = true
license-file.workspace = true
repository.workspace = true


[dependencies]
# Dioxus core + router
dioxus = { version = "0.7", default-features = false }
dioxus-router = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform time helpers
web-sys = "0.3.90"
gloo-net = "0.6.0"
wasm-bindgen = "0.2.113"
js-sys = "0.3.90"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
dirs = "6.0.0"
futures-channel = "0.3.32"
once_cell = "1.21.3"

# ---------- Web (wasm32) ----------
[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.3", features = ["web", "macro"] }
dioxus-signals = "0.7.3"
dioxus-sdk-geolocation = "0.7.0"

gloo-net = { version = "0.6.0", features = ["http"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }

wasm-bindgen = "0.2.113"
futures-util = "0.3.32"
wasm-bindgen-futures = "0.4.63"
web-sys = { version = "0.3.90", features = [
    "Window",
    "Location",
    "WebSocket",
    "MessageEvent",
    "Storage",
    "console",
    "Navigator",
    "Geolocation",
    "Position",
    "PositionError",
    "Coordinates",
    "Permissions", # Optional (for permission queries)
    "PermissionStatus", # Optional",
] }

# ---------- Native (desktop/mobile) ----------
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "macro"] }
# For mobile builds we still compile the same code; `dx` selects the right platform features.
# If you want to be explicit, you can swap to features=["mobile"] in a mobile-only profile.
dioxus-signals = "0.7.3"
dioxus-desktop = "0.7.3"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13.2", default-features = true, features = ["json", "rustls", "blocking"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots", "native-tls"] }
native-tls = "0.2.18"
futures-util = "0.3.32"
url = "2.5.8"


[target.'cfg(target_os = "windows")'.dependencies]
dioxus-sdk-geolocation = "0.7.0"



[features]
# Dioxus CLI uses these conventions. :contentReference[oaicite:3]{index=3}
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[build-dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
