[package]
name = "groundstation_frontend"
version = "0.3.0"
edition = "2024"
description.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
dioxus = { version = "0.7", default-features = false }
dioxus-router = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

web-sys = "0.3.91"
gloo-net = "0.6.0"
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3.0"
dirs = "6.0.0"
futures-channel = "0.3.32"
once_cell = "1.21.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7.3", features = ["web", "macro"] }
dioxus-signals = "0.7.3"
dioxus-sdk-geolocation = "0.7.0"
gloo-net = { version = "0.6.0", features = ["http"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.114"
futures-util = "0.3.32"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
    "Window",
    "Location",
    "WebSocket",
    "MessageEvent",
    "Storage",
    "console",
    "Navigator",
    "Geolocation",
    "Position",
    "PositionError",
    "Coordinates",
    "Permissions",
    "PermissionStatus",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7.3", features = ["desktop", "macro"] }
dioxus-signals = "0.7.3"
dioxus-desktop = "0.7.3"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "blocking", "rustls"] }
rustls = "0.23"
rustls-platform-verifier = "0.6.2"
futures-util = "0.3.32"
url = "2.5.8"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.dependencies]
dioxus-sdk-geolocation = "0.7.0"
native-tls = "0.2.14"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots", "native-tls"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "windows")))'.dependencies]
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22.4"
ndk-context = "0.1.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[build-dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }
winres = "0.1.12"
