[package]
name = "map_downloader"
description.workspace = true
license-file.workspace = true
repository.workspace = true
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "fs"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
indicatif = "0.18.3"
futures = "0.3"

[[bin]]
name = "map_downloader"
path = "src/fetch_gibs_tiles.rs"
