[package]
name = "map_downloader"
description.workspace = true
license-file.workspace = true
repository.workspace = true
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "time", "fs"] }
reqwest = { version = "0.13.2", features = ["rustls"] }
indicatif = "0.18.4"
futures = "0.3.32"

[[bin]]
name = "map_downloader"
path = "src/fetch_gibs_tiles.rs"
